manifests/backend/deployment-backend.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: test-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-backend
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: test-backend
    spec:
      volumes:
        - name: config
          configMap:
            name: http-config-backend
            defaultMode: 420
      containers:
        - name: container
          image: 'quay.io/mparrade/test-backend:latest'
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: config
              mountPath: /app/config/
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
