manifests/backend/service-backend.yaml
kind: Service
apiVersion: v1
metadata:
  name: test-backend
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
  selector:
    app: test-backend
